base/src/test/resources/failure/syntax/issue293-emoji64.aya.txt
In file $FILE:10:28 ->

   8 |   | ğŸ€
   9 | 
  10 | def u : â¤ï¸å®ˆâ¤ï¸æŠ¤â¤ï¸æœ€â¤ï¸å¥½â¤ï¸çš„â¤ï¸ => ğŸ€
                                   ^^

Error: Cannot check the expression of type
         â¤ï¸
         (Normalized: â¤ï¸)
       against the type
         â¤ï¸å®ˆâ¤ï¸æŠ¤â¤ï¸æœ€â¤ï¸å¥½â¤ï¸çš„â¤ï¸
         (Normalized: â¤ï¸å®ˆâ¤ï¸æŠ¤â¤ï¸æœ€â¤ï¸å¥½â¤ï¸çš„â¤ï¸)
What are you doing?
